--- a/css/grid.css
+++ b/css/grid.css
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
 }
 
-xs-1 {
+.xs-1 {
   width: 100%;
 }
 
@@ -30,7 +30,7 @@ xs-1 {
 @media only screen and (min-width: 60em) {
 
   .l-1-3 {
-    width: 33.33333%;
+    width: 33.3333%;
   }
 
 }
